[package]

name = "slab"
# When releasing to crates.io:
# - Update version number
#   - README.md
# - Update CHANGELOG.md
# - Create git tag
version = "0.4.8"
authors = ["Carl Lerche <me@carllerche.com>"]
edition = "2018"
rust-version = "1.65"
license = "MIT"
description = "Pre-allocated storage for a uniform data type"
repository = "https://github.com/tokio-rs/slab"
keywords = ["slab", "allocator", "no_std"]
categories = ["memory-management", "data-structures", "no-std"]
exclude = ["/.*"]

[features]
std = []
default = ["std"]
tx = ["std", "replace_with"]

[build-dependencies]
autocfg = "1"

[dependencies]
serde = { version = "1.0.95", optional = true, default-features = false, features = ["alloc"] }
replace_with = { version = "0.1.7", optional = true }

[dev-dependencies]
rustversion = "1"
serde = { version = "1", features = ["derive"] }
serde_test = "1"
